--- a/Dockerfile.recon
+++ b/Dockerfile.recon
@@ -1,19 +1,55 @@
-FROM debian:latest AS base
-    LABEL autor="BlackStar"
-    LABEL description="Simple Red Team"
-    ENV WORKDIR_ENV=/redteam/recon
-    WORKDIR ${WORKDIR_ENV}
+ARG VERSION=bullseye
+
+FROM debian:${VERSION} AS base
+    LABEL autor="Jasen"
+    LABEL description="Red Team and Pentesting for Recon"
+
+    ENV ROOT_DIR /redteam 
+    ENV WORKDIR_FULL=${ROOT_DIR}/tools
+    ENV WORKDIR_RECON=${WORKDIR_FULL}/recon
+    WORKDIR ${WORKDIR_RECON}
+    #ENV WORKDIR_ENV=/redteam/recon
+    #WORKDIR ${WORKDIR_ENV}
+
+
+    ARG USERNAME=redteam
+    ARG PASSWORD=redteam
+    #ARG EXPOSE_PORTS="22 3306 5432 8080 8000"
+    ARG EXPOSE_PORTS="5000 80 443 8081"
+
+    ENV USERNAME $USERNAME
+    ENV PASSWORD $PASSWORD
+    ENV EXPOSE_PORTS $EXPOSE_PORTS
+
     SHELL ["/bin/bash", "-c"]
 
-    RUN apt-get update && apt-get -y install net-tools netcat python3 python3-dev python3-pip \
-        unzip wget curl git gcc libc-dev libxslt-dev libevent-dev libssl-dev zlib1g zlib1g-dev \
-        firefox-esr xfce4-terminal autoconf automake libtool apt-utils openssh-server openssl \
-        build-essential libpcap-dev libpq-dev libsqlite3-dev libsqlite3-0
+    COPY data/README-recon.txt ${WORKDIR_RECON}
 
-    RUN cd ${WORKDIR} && git clone https://github.com/lanmaster53/recon-ng.git && cd recon-ng && pip3 install -r REQUIREMENTS
-    RUN cd ${WORKDIR} && git clone https://github.com/s0md3v/Photon && cd Photon && pip3 install -r requirements.txt
-#    RUN cd ${WORKDIR} && git clone https://github.com/lamaries/theHarvester && cd theHarvester && pip3 install -r requirements/base.txt
-#    RUN cd ${WORKDIR} && git clone https://github.com/Mr-Un1k0d3r/MaliciousMacroGenerator
-    RUN cd ${WORKDIR} && git clone https://github.com/nmap/nmap.git && cd nmap && ./configure && make && make install
+    RUN apt-get update && apt-get -y install net-tools netcat socat nano locate python3 python3-dev python3-pip \
+        python python-dev unzip wget curl git gcc libc-dev libxslt-dev libevent-dev libssl-dev zlib1g zlib1g-dev \
+        firefox-esr xfce4-terminal autoconf automake libtool apt-utils openssh-server openssl openjdk-11-jre openjdk-11-jdk \
+        build-essential libpcap-dev libpq-dev libsqlite3-dev libsqlite3-0 \
+	software-properties-common sudo locate \
+        && useradd -m ${USERNAME} \
+        && echo "${USERNAME}:${PASSWORD}" | chpasswd \
+        && adduser ${USERNAME} sudo
+
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/lanmaster53/recon-ng.git && cd recon-ng && pip3 install -r REQUIREMENTS
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/s0md3v/Photon && cd Photon && pip3 install -r requirements.txt
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/laramies/theHarvester && cd theHarvester && pip3 install -r requirements/base.txt
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/nmap/nmap.git && cd nmap && ./configure && make && make install
+    RUN cd ${WORKDIR_RECON} && git clone https://gitlab.com/illwill/skiptracer.git && cd skiptracer && sed -i 's/pprint/pprintpp/g' requirements.txt && pip install -r requirements.txt
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/laramies/metagoofil
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/FortyNorthSecurity/Just-Metadata.git && cd Just-Metadata/setup && ./setup.sh
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/smicallef/spiderfoot.git && cd spiderfoot && pip3 install -r requirements.txt
+    RUN cd ${WORKDIR_RECON} && mkdir maltego && cd maltego && wget https://maltego-downloads.s3.us-east-2.amazonaws.com/linux/Maltego.v4.2.19.13940.linux.zip && unzip Maltego.v4.2.19.13940.linux.zip
+    RUN cd ${WORKDIR_RECON} && mkdir phoneinfoga && cd phoneinfoga && curl -L "https://github.com/sundowndev/phoneinfoga/releases/download/v2.0.5/phoneinfoga_$(uname -s)_$(uname -m).tar.gz" -o phoneinfoga.tar.gz && tar xvf phoneinfoga.tar.gz && rm -rf phoneinfoga.tar.gz
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/six2dez/reconftw.git && cd reconftw && ./install.sh
+    RUN cd ${WORKDIR_RECON} && git clone https://github.com/aboul3la/Sublist3r.git && cd Sublist3r && pip install -r requirements.txt
 
 
+
+#    RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* && \
+    RUN chmod 700 -R ${WORKDIR_FULL} && chown ${USERNAME}:${USERNAME} -R ${WORKDIR_FULL}
+    EXPOSE $EXPOSE_PORTS
+    USER ${USERNAME}
